# This program is licensed under the "MIT License".
# Please see the file LICENSE in this distribution
# for license terms.

[package]
name = "day05"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Solution to Advent of Code 2022 Day 5."
repository = "http://github.com/AdventOfCode2022-Massey/day05"
readme = "README.md"
license = "MIT"
edition = "2021"

[[bin]]
name = "day05"
path = "soln.rs"

[dependencies]
regex = "1.7.0"

[dependencies.aoc]
version = "0.2"
git = "https://github.com/BartMassey/libaoc"

